Updated icon alignment issue for the forecast section

--- a/src/components/Weather/Forecast/ForecastDay.module.scss
+++ b/src/components/Weather/Forecast/ForecastDay.module.scss
@@ -27,6 +27,8 @@
   }
 
   .icon {
+    display: grid;
+    place-items: center center;
     width: 45px;
     height: 45px;
   }
